added more project description on motioneye and its setup

--- a/Robot_Web_Controller.ipynb
+++ b/Robot_Web_Controller.ipynb
@@ -160,14 +160,7 @@
     "3. For Dockerfile changes, rebuild:\n",
     "   ```bash\n",
     "    docker-compose up -d --build\n",
-    "   ```\n",
-    "\n",
-    "## ➡️ Next Steps (Ready When You Are):\n",
-    "\n",
-    "1. Add WebSocket Service: Python server using websockets library\n",
-    "2. Camera Streaming: OpenCV container with MJPEG stream\n",
-    "3. Database: Add a PostgreSQL container for logging\n",
-    "4. Authentication: Basic auth for web interface"
+    "   ```\n"
    ]
   },
   {
@@ -260,7 +253,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "## ⏭️ Next Phase - GPIO control\n",
+    "## ⏭️ Next Phase - GPIO control on Raspberry Pi 🤖\n",
     "\n",
     "### 1. Update the docker-compose.yml\n",
     "`nano docker-compose.yml`\n",
@@ -516,13 +509,15 @@
     "---\n",
     "## Camera config for motioneye login\n",
     "\n",
-    "Get the apache config file from the container:\n",
-    "`docker cp robot_web://usr/local/apache2/conf/httpd.conf ./`\n",
+    "🎥 [Set up MotionEye in Docker on Raspberry Pi](./MotionEye_in_Docker_(Raspberry_Pi).ipynb)\n",
+    "\n",
+    "Get the apache config file from the container:<br/>\n",
+    "`docker cp robot_web://usr/local/apache2/conf/httpd.conf ./`<br/>\n",
     "`nano httpd.conf`\n",
     "\n",
-    "Apache modules are enabled (manually via `httpd.conf`):\n",
-    "`LoadModule proxy_module modules/mod_proxy.so`\n",
-    "`LoadModule proxy_http_module modules/mod_proxy_http.so`\n",
+    "Apache modules are enabled (manually via `httpd.conf`):<br/>\n",
+    "`LoadModule proxy_module modules/mod_proxy.so`<br/>\n",
+    "`LoadModule proxy_http_module modules/mod_proxy_http.so`<br/>\n",
     "\n",
     "add the following lines to the end:\n",
     "\n",
@@ -536,14 +531,10 @@
     "ProxyPassReverse /camera http://host.docker.internal:8082/\n",
     "```\n",
     "\n",
-    "Copy the config file back to the container:\n",
-    "`docker cp httpd.conf robot_web://usr/local/apache2/conf/httpd.conf`\n",
+    "Copy the config file back to the container:<br/>\n",
+    "`docker cp httpd.conf robot_web://usr/local/apache2/conf/httpd.conf`<br/>\n",
     "`docker restart robot_web`\n",
-    "\n",
-    "---\n",
-    "\n",
-    " To add the ProxyPass configuration in your Apache container, you'll need to:\n",
-    " "
+    "\n"
    ]
   },
   {
@@ -565,14 +556,6 @@
     "</div>\n",
     "  "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7d431d2c-b157-4700-9235-b7ec9566acca",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
