--- a/Save_customer_info.ipynb
+++ b/Save_customer_info.ipynb
@@ -204,7 +204,7 @@
    "source": [
     "--- \n",
     "## Modify the Docker container\n",
-    "## Add save leads to the chat bot\n",
+    "## Add save leads to the chat bot Backend\n",
     "1. Modify the `Dockerfile` and add\n",
     "\n",
     "```dockerfile\n",
@@ -240,7 +240,7 @@
     "\n",
     "### Run the Flask app:\n",
     "```bash\n",
-    "python3 app.py\n",
+    "python3 save_lead.py\n",
     "```\n",
     "\n",
     "### Test via browser console:\n",
@@ -267,6 +267,7 @@
    "id": "589e4318-5da8-4248-9c13-1898e9995a87",
    "metadata": {},
    "source": [
+    "---\n",
     "<div style=\"font-family: Arial, sans-serif; line-height: 1.5;\">\n",
     "  <strong>János Rostás & ChatGPT</strong><br>\n",
     "  👨‍💻 Electronic & Computer Engineer | 🛠️ Tinkerer with a Purpose | 🐳 Docker Enthusiast<br>\n",
