added screensots and organised the project

--- a/documents/Robot_Web_Controller.ipynb
+++ b/documents/Robot_Web_Controller.ipynb
@@ -509,7 +509,7 @@
     "---\n",
     "## Camera config for motioneye login\n",
     "\n",
-    "🎥 [Set up MotionEye in Docker on Raspberry Pi](./MotionEye_in_Docker_(Raspberry_Pi).ipynb)\n",
+    "🎥 [Set up MotionEye in Docker on Raspberry Pi](./MotionEye_in_Docker_Raspberry_Pi.ipynb)\n",
     "\n",
     "Get the apache config file from the container:<br/>\n",
     "`docker cp robot_web://usr/local/apache2/conf/httpd.conf ./`<br/>\n",
@@ -553,9 +553,18 @@
     "  <strong>János Rostás & ChatGPT</strong><br>\n",
     "  👨‍💻 Electronic & Computer Engineer | 🛠️ Tinkerer with a Purpose | 🐳 Docker Enthusiast<br>\n",
     "  🌐 <a href=\"https://janosrostas.co.uk\" target=\"_blank\">janosrostas.co.uk</a>\n",
+    "  | <a href=\"https://www.linkedin.com/in/janos-rostas/\" target=\"_blank\">LinkedIn</a>\n",
     "</div>\n",
     "  "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37b1b4a2-a5a3-4817-a6f2-84353949423e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
