--- a/documents/Save_customer_info.ipynb
+++ b/documents/Save_customer_info.ipynb
@@ -272,16 +272,10 @@
     "  <strong>János Rostás & ChatGPT</strong><br>\n",
     "  👨‍💻 Electronic & Computer Engineer | 🛠️ Tinkerer with a Purpose | 🐳 Docker Enthusiast<br>\n",
     "  🌐 <a href=\"https://janosrostas.co.uk\" target=\"_blank\">janosrostas.co.uk</a>\n",
-    "</div>"
+    "  | <a href=\"https://www.linkedin.com/in/janos-rostas/\" target=\"_blank\">LinkedIn</a>\n",
+    "</div>\n",
+    "  "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "06a253c3-5057-451e-ae84-05f116b88dcd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
