--- a/documents/MotionEye_in_Docker_Raspberry_Pi.ipynb
+++ b/documents/MotionEye_in_Docker_Raspberry_Pi.ipynb
@@ -95,8 +95,18 @@
     "  <strong>János Rostás & ChatGPT</strong><br>\n",
     "  👨‍💻 Electronic & Computer Engineer | 🛠️ Tinkerer with a Purpose | 🐳 Docker Enthusiast<br>\n",
     "  🌐 <a href=\"https://janosrostas.co.uk\" target=\"_blank\">janosrostas.co.uk</a>\n",
-    "</div>"
+    "  | <a href=\"https://www.linkedin.com/in/janos-rostas/\" target=\"_blank\">LinkedIn</a>\n",
+    "</div>\n",
+    "  "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82b70f6b-c4bf-4b9a-af6d-a24a715d4d39",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
